--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.7.0",
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.7.2",
     "@types/node": "^18",
-    "nuxt": "^3.5.2"
+    "axios": "^1.4.0",
+    "nuxt": "^3.5.2",
+    "pinia": "^2.1.4"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11"
   }
 }
